language/move-lang/tests/move_check/typing/unary_neg.move
module M {
    resource struct R {
        f: bool
    }

    t0(x: u64) {
        (-x: u64);
    }
}
